se agrega el analizador sintactico y lexico

--- a/Tarea3D/nbproject/project.properties
+++ b/Tarea3D/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tarea3D
 excludes=
+file.reference.java-cup-11a.jar=/home/yeferal/Documentos/Compi/java-cup-11a.jar
+file.reference.JFlex.jar=/home/yeferal/Documentos/Compi/JFlex.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.JFlex.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
